--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <body>
       <h1>Madeleine Burke</h1>
       <p> <strong> Student Journalist</strong></p>
-      <img src="Resume%20Photo.pdf" width="300px">
+      <img src="Resume%20Photo.png" width="300px">
       <div id="contact">mburke18@terpmail.umd.edu
       Instagram: @madeleineburkebroadcast</div>
       
@@ -21,7 +21,9 @@
         Bachelor of Arts, Journalism, University of Maryland 2028</li></ul>
      
       <h2>Skills</h2>
+      <ul>
       <li>Social Media Strategy</li>
       <li>Story Design and Presentation</li>
+          </ul>
   </body>
 </html>
