Worked on resume in class Feb 16

--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,14 @@
     <title>Madeleine Burke Resume</title>
   </head>
   <body>
+    <!--I built this myself!-->
       <h1>Madeleine Burke</h1>
       <p> <strong> Student Journalist</strong></p>
       <img src="Resume%20Photo.png" width="300px">
-      <div id="contact">mburke18@terpmail.umd.edu
-      Instagram: @madeleineburkebroadcast</div>
+      <div id="contact">
+        <a href="mailto:mburke18@terpmail.umd.edu">mburke18@terpmail.umd.edu</a> <br>
+      <a href="https://www.instagram.com/madeleineburkebroadcast/>" target="_blank">Instagram: @madeleineburkebroadcast</a>
+    </div>
       
       <h2>Experience</h2>
         <h3>Production Member</h3>
