--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>My First HTML Document</title>
+        <meta charset="UTF-8" />
+        <title>Title</title>
+        <link rel="stylesheet" href="styles.css" />
+        <script src="script.js"></script>
     </head>
     <body>
-        <p>
-            Hello World!I'm in 352 right now.
-        </p>
+        <h1 class="title">Hello World</h1>
+        <div id="mainDiv">Hello Div</div>
+        <br />
+        <button onclick="buttonClicked()">Click me</button>
     </body>
 </html>
